--- a/Challenge 1/styles/mystyle.css
+++ b/Challenge 1/styles/mystyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:ital@1&display=swap');
+
 *{
 	box-sizing: border-box;
 	margin:0;
@@ -7,9 +9,9 @@
 body {
 	height: 100vh;
 	width: 100vw;
-	overflow: hidden;
+	overflow: hiddgen;
 	color: #fff;
-	font-family: 'Patua One', cursive;
+	font-family: 'Exo', sans-serif;
 	font-size: 18px;
  }
 
@@ -188,9 +190,9 @@ circle {
     flex-direction: row;
     justify-content: space-evenly;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.06);
     padding: 50px;
-    padding-bottom: 500px;
+    padding-bottom: 50px;
 
 
 };
